--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,5 @@
 }
 
 .mobile-nav {
-  @apply block md:hidden fixed top-10 my-10 py-2 m-5 duration-500 bg-red-100;
+  @apply block md:hidden fixed top-20 my-10 py-2 m-8 duration-500;
 } 
